# PINNs

./: .gitignore  README.md  pyproject.toml
Utilities/: plotting.py
main/continuous_time_identification (Navier-Stokes)/: NavierStokes.py
main/continuous_time_inference (Schrodinger)/: Schrodinger.py  Schrodinger_Torch.py
main/discrete_time_identification (KdV)/: KdV.py
