[project]
name = "pinns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "plotting>=0.0.7",
    "pyDOE>=1.0.2",
    "scipy>=1.17.1",
    "tensorflow>=2.21.0",
]



[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
