[project]
name = "pinns"
version = "0.1.0"
description = "Physics-Informed Neural Networks with PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepxde>=1.15.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pydoe>=1.0.2",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
